# SunsetProject

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  boxes.example.json  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
config/: pipeline.conf
frontend/: bit_layout.js  boxes.html  colorizer.js  encode_azimuth.js  fill_mask.js  format_guard.js  how-it-works.html  index.html  robots.txt  site.webmanifest  sitemap.xml  sunset_azimuth.js  us_land.geojson
frontend/tests/: bit_layout.test.js  colorizer.test.js  encode_azimuth.test.js  fill_mask.test.js  format_guard.test.js  sunset_azimuth.test.js
scripts/: build_us_polygons.py  dedupe_downloads.py  deploy.sh  dev_server.py
src/bit_layout/: BitLayout.h  CMakeLists.txt  gen_vectors_header.py  vectors.json
src/bit_layout/tests/: test_bit_layout.cpp
src/compute_azimuth_range/: AzimuthRangeAccumulator.h  AzimuthRangeSweep.cpp  AzimuthRangeSweep.h  BitmaskGeoTiffWriter.cpp  BitmaskGeoTiffWriter.h  CMakeLists.txt  FrozenStripSources.h  StripPostProcess.h  StripProcessor.cpp  StripProcessor.h  StripWorkingSet.h  ThreadPool.h  WestEdgePreflight.h  main.cpp
src/compute_azimuth_range/tests/: test_azimuth_range_accumulator.cpp  test_bitmask_geotiff_writer.cpp  test_serial_vs_parallel.cpp  test_strip_post_process.cpp  test_strip_processor.cpp  test_strip_working_set.cpp  test_thread_pool.cpp  test_west_edge_preflight.cpp
src/dem_tile_loader/: CMakeLists.txt  DEMTile.h  DEMTileLoader.cpp  DEMTileLoader.h  FrozenDEM.h
src/dem_tile_loader/tests/: test_bilinear_interpolation.cpp  test_elevation_sentinels.cpp  test_frozen_dem_view.cpp  test_lru_eviction.cpp  test_tile_discovery.cpp
src/encode_tiles/: __main__.py  cli.py  downsample.py  encoder.py  mosaic.py  progress.py  tilejson.py  tiles.py
src/encode_tiles/tests/: test_cli.py  test_downsample.py  test_encoder.py  test_merge.py  test_pipeline.py  test_progress.py  test_tilejson.py
src/geo/: CMakeLists.txt  FrozenTileSet.h  GeoTile.h
src/geo/tests/: test_frozen_tile_set.cpp  test_geo_tile.cpp
src/horizon_sweep_engine/: CMakeLists.txt  Fakes.h  HorizonSweepEngine.cpp  HorizonSweepEngine.h  PipelineConfig.cpp  PipelineConfig.h  PngWrite.cpp  PngWrite.h  ProductionAdapters.h
src/horizon_sweep_engine/tests/: test_cardinal_visibility.cpp  test_coastal_regression.cpp  test_nan_no_data.cpp  test_ocean_beach.cpp  test_production_adapters.cpp  test_rotated_frame_visibility.cpp  test_sample_verdicts.cpp  test_trace_ray_selection.cpp
src/ocean_mask_rasterizer/: CMakeLists.txt  FrozenOcean.h  GshhgWaterPolygonSource.cpp  GshhgWaterPolygonSource.h  OceanMaskRasterizer.cpp  OceanMaskRasterizer.h  OceanSampling.h  OsmWaterPolygonSource.cpp  OsmWaterPolygonSource.h  WaterPolygonSource.h
src/ocean_mask_rasterizer/tests/: test_frozen_ocean_view.cpp  test_gshhg_open.cpp  test_gshhg_spatial_index.cpp  test_is_water_rasterization.cpp  test_lru_tile_cache.cpp  test_ocean_mask.cpp  test_ocean_origin_for_ray.cpp  test_osm_water_polygon_source.cpp
src/render_slice/: CMakeLists.txt  render_slice_main.cpp
src/run_boxes/: __init__.py  __main__.py  driver.py
src/run_boxes/tests/: test_driver.py
src/trace_ray/: CMakeLists.txt  main.cpp
